--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/forms": "~8.1.0",
     "@angular/platform-browser": "~8.1.0",
     "@angular/platform-browser-dynamic": "~8.1.0",
+    "@angular/pwa": "^0.901.9",
     "@angular/router": "~8.1.0",
+    "@angular/service-worker": "~8.1.0",
     "ngx-quill": "^11.1.0",
     "quill": "^1.3.7",
     "rxjs": "~6.4.0",
